bug fix in interface adapter and ui